# lambda-mcp

./: .gitignore  QUICKSTART.md  README.md  STRUCTURE.md  __init__.py  lambda_mcp.py  pyproject.toml  requirements.txt  test_data_explorer.py  test_new_tools.py  test_show_ddl.py  test_tools.py
lib/: data_explorer_client.py  response_utils.py
tools/: data_explorer.py  elasticsearch.py
